Exircise by HackRank

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="EjerciciosPlatzi2.js"></script>
+    <script src="birthDayCake.js"></script>
 </body>
 </html>
