--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="matriz5x5.js"></script>
+    <script src="Platzi3.js"></script>
 </body>
 </html>
